Итерация 1.6